<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hellowjohnny"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/dailygray"

        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:tint="@color/green"
        android:text="@string/readytotasty"
        android:textColor="@color/text_gray"
        android:textSize="14sp"
        />

    <SearchView
        android:id="@id/searchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:padding="0dp"
        style="@style/Widget.AppCompat.SearchView"
        android:queryHint="Search recipes..."
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/dailyisp"
        android:textColor="@color/dailygray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="231dp"
        android:layout_height="202dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        app:cardElevation="0dp"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="198dp"
            android:layout_height="165dp"
            app:cardCornerRadius="18dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:src="@drawable/foodimage" />

            <ImageView
                android:id="@+id/calenderView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="start"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/circle_white_background"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/calender_green_icon" />

            <ImageView
                android:id="@+id/favoritView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/circle_white_background"
                android:padding="5dp"
                android:src="@drawable/heart_green_icon" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/srawberry"
            android:layout_gravity="bottom | center_horizontal"
            android:layout_marginBottom="7dp"
            android:textSize="16dp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:paddingHorizontal="20dp"
        android:orientation="horizontal"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_samsung"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="105dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/chip_color_selection"
            android:elevation="1dp"
            android:textColor="@color/chip_text_color_selection"
            android:layout_marginRight="8dp"
            android:text="@string/categories" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_apple"
            android:layout_width="105dp"
            android:textAlignment="center"
            android:layout_marginRight="8dp"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/chip_color_selection"

            android:elevation="1dp"
            android:text="@string/countries"
            android:textColor="@color/chip_text_color_selection"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_oppo"
            android:layout_width="105dp"
            android:textAlignment="center"
            android:textColor="@color/chip_text_color_selection"
            android:backgroundTint="@color/chip_color_selection"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:text="@string/ingrediants" />
    </com.google.android.material.chip.ChipGroup>

</LinearLayout>